--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Sistema Escolar</title>
+    <title>E-Commerce</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
